fixed extra space in the body of the app

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 .App {
   text-align: center;
